added jet algo to jet section

--- a/hicollisions.tex
+++ b/hicollisions.tex
@@ -158,28 +158,29 @@ and \Ncoll\ and \Npart are given by \cite{Kharzeev:2000ph, Bialas:1976ed}:
 \Npart (b) = & A \int T_A ({\bf s}) \Big[ 1 - \big(1-T_B ({\bf s - b}) \sigmainel \big)^B \Big] d^2 s \\
 + & B \int T_B ({\bf s-b}) \Big[ 1 - \big(1-T_A ({\bf s}) \sigmainel \big)^A \Big] d^2 s \nonumber
 \end{align}
-The correlation between \Ncoll\ and \Npart\ can be seen in Figure~\ref{fig:NcollNpart}:
-
-\begin{figure}[htbp]
-\begin{center}
-\includegraphics[width=0.55\textwidth]{figures/theory/NcollNpart}
-\caption{The $\Ncoll-\Npart$ correlation for \pbpb\ collisions at \sqrtsnn\ = 5.02 TeV.
-Taken from \cite{Perepelitsa:2212936}.}
-\label{fig:NcollNpart}
-\end{center}
-\end{figure}
-
+The correlation between \Ncoll\ and \Npart\ can be seen in Figure~\ref{fig:NcollNpart}.
 The charged particle multiplicity $N_{\mathrm{ch}}$ along with the combination of \Npart\ and impact parameter $b$ can be used to determine the centrality of a heavy ion event.
 An example of this is shown in Figure~\ref{fig:cent_estimate}.
 
-\begin{figure}[htbp]
+\begin{figure}
 \begin{center}
-\includegraphics[width=0.45\textwidth]{figures/theory/cent_estimate}
+  \begin{minipage}[b]{0.4\textwidth}
+\includegraphics[width=\textwidth]{figures/theory/NcollNpart}
+\caption{The $\Ncoll-\Npart$ correlation for \pbpb\ collisions at \sqrtsnn\ = 5.02 TeV.
+Taken from \cite{Perepelitsa:2212936}.}
+\label{fig:NcollNpart}
+  \end{minipage}
+ \qquad  \qquad  \qquad
+  \begin{minipage}[b]{0.4\textwidth}
+\includegraphics[width=\textwidth]{figures/theory/cent_estimate}
 \caption{The correlation between the observable \Nch\ and \Npart\ to determine the centrality distribution.
 Taken from \cite{doi:10.1146/annurev.nucl.57.090506.123020}.}
 \label{fig:cent_estimate}
-\end{center}
+  \end{minipage}
+  \end{center}
 \end{figure}
+
+
 
 
 
