--- a/macros.tex
+++ b/macros.tex
@@ -1,5 +1,6 @@
 % !TEX encoding = UTF-8 Unicode
 % !TEX root = thesis-ex.tex
+\renewcommand{\labelitemii}{$\circ$}
 \newcommand{\epm}{$e^+ e^-$}
 \newcommand{\qqbar}{$q \bar{q}$}
 \newcommand{\sigmainel}{\sigma_{\mathrm{inel}}^{\mathrm{NN}}}
