--- a/qcd.tex
+++ b/qcd.tex
@@ -61,7 +61,8 @@ This dependence can be expressed in terms of the $\beta$ function as
 \begin{align}
 Q^2 \frac{\partial \alpha_s (Q^2)}{\partial Q^2} = \beta(\alpha_s (Q^2))
 \end{align}
-where $Q$ is the momentum transfer in the particle reaction.
+where $Q$ is the momentum transfer in the particle reaction
+\footnote{The momentum transfer $Q$ is the amount of momentum transferred in a scattering process.}.
 The beta function can be expressed using perturbative QCD (pQCD) as:
 
 \begin{align}
