--- a/thesis-ex.bib
+++ b/thesis-ex.bib
@@ -1,5 +1,73 @@
 % !TEX root = thesis-ex.tex
 % !TEX encoding = UTF-8 Unicode
+@article{ARNISON1983214,
+title = "Hadronic jet production at the CERN proton-antiproton collider",
+journal = "Physics Letters B",
+volume = "132",
+number = "1",
+pages = "214 - 222",
+year = "1983",
+issn = "0370-2693",
+doi = "https://doi.org/10.1016/0370-2693(83)90254-X",
+url = "http://www.sciencedirect.com/science/article/pii/037026938390254X",
+author = "{UA1 Collaboration}",
+}
+@article{CMS:2009lxa,
+      title          = "{A Cambridge-Aachen (C-A) based Jet Algorithm for boosted
+                        top-jet tagging}",
+      collaboration  = "CMS",
+      year           = "2009",
+      reportNumber   = "CMS-PAS-JME-09-001",
+      SLACcitation   = "%%CITATION = CMS-PAS-JME-09-001;%%"
+}
+
+@article{Atkin_2015,
+	doi = {10.1088/1742-6596/645/1/012008},
+	url = {https://doi.org/10.1088%2F1742-6596%2F645%2F1%2F012008},
+	year = 2015,
+	month = {oct},
+	publisher = {{IOP} Publishing},
+	volume = {645},
+	pages = {012008},
+	author = {Ryan Atkin},
+	title = {Review of jet reconstruction algorithms},
+	journal = {Journal of Physics: Conference Series},
+}
+
+@inproceedings{Blazey:2000qt,
+      author         = "Blazey, Gerald C. and others",
+      title          = "{Run II jet physics}",
+      booktitle      = "{QCD and weak boson physics in Run II. Proceedings,
+                        Batavia, USA, March 4-6, June 3-4, November 4-6, 1999}",
+      url            = "http://lss.fnal.gov/cgi-bin/find_paper.pl?conf-00-092",
+      year           = "2000",
+      pages          = "47-77",
+      eprint         = "hep-ex/0005012",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ex",
+      reportNumber   = "FERMILAB-CONF-00-092-E",
+      SLACcitation   = "%%CITATION = HEP-EX/0005012;%%"
+}
+
+@article{Britzger:2017maj,
+      author         = "Britzger, Daniel and Rabbertz, Klaus and Savoiu, Daniel
+                        and Sieber, Georg and Wobisch, Markus",
+      title          = "{Determination of the strong coupling constant using
+                        inclusive jet cross section data from multiple
+                        experiments}",
+      journal        = "Eur. Phys. J. C",
+      volume         = "79",
+      year           = "2019",
+      number         = "1",
+      pages          = "68",
+      doi            = "10.1140/epjc/s10052-019-6551-8",
+      eprint         = "1712.00480",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      SLACcitation   = "%%CITATION = ARXIV:1712.00480;%%"
+}
+
+
 @article{PhysRevD.71.114513,
   title = {Observation of string breaking in QCD},
   author = {Bali, Gunnar S. and Neff, Hartmut and D\"ussel, Thomas and Lippert, Thomas and Schilling, Klaus},
@@ -3628,21 +3696,25 @@ archivePrefix  = "arXiv",
 primaryClass   = "hep-ph",
 SLACcitation   = "%%CITATION = ARXIV:1407.0326;%%"
 }
+
 @article{Qin:2015srf,
-author         = "Qin, Guang-You and Wang, Xin-Nian",
-title          = "{Jet quenching in high-energy heavy-ion collisions}",
-journal        = "Int. J. Mod. Phys.~E",
-volume         = "24",
-year           = "2015",
-number         = "11",
-pages          = "1530014",
-doi            = "10.1142/S0218301315300143",
-note           = "[,309(2016)]",
-eprint         = "1511.00790 [hep-ph]",
+author = {Qin, Guang-You and Wang, Xin-Nian},
+title = {Jet quenching in high-energy heavy-ion collisions},
+journal = {Int. J. Mod. Phys.~E},
+volume = {24},
+number = {11},
+pages = {1530014},
+year = {2015},
+doi = {10.1142/S0218301315300143},
+URL = {https://doi.org/10.1142/S0218301315300143},
+eprint         = "1511.00790",
 archivePrefix  = "arXiv",
 primaryClass   = "hep-ph",
-SLACcitation   = "%%CITATION = ARXIV:1511.00790;%%"
 }
+
+
+
+
 @article{ATLAS:2012at,
 author         = "{ATLAS Collaboration}",
 title          = "{Measurement of the azimuthal anisotropy for charged
