--- a/thesis-ex.tex
+++ b/thesis-ex.tex
@@ -82,19 +82,6 @@ This depletion remains constant for \mbox{$0.3 < \rvar < 0.6$}.
 
 \end{abstract}
 
-
-%The Large Hadron Collider (LHC) at the European Center for Nuclear Research (CERN) has been at the forefront of research in the field of heavy ion physics, and has provided unprecedented access to study the Quark Gluon Plasma (QGP). It was built with the purpose of accelerating subatomic particles close to the speed of light and colliding them to study their underlying structure. Detectors around the LHC ring, the biggest of which are  ATLAS (A Toroidal LHC ApparatuS), CMS (Compact Muon Solenoid), ALICE (A Large Ion-Collider Experiment), and LHCb (LHC-Beauty), study these collisions and use the debris as a playground to verify and expand the ``Standard Model'' of particle physics. This thesis will focus on measurements of collisions involving heavy ions as measured by the ATLAS detector.
-
-%Relativistic heavy ion collisions such as those at the LHC provide insight into the interactions between quarks and gluons. These fundamental building blocks of all matter interact via the strong force, the theoretical framework of which is described by Quantum Chromodynamics (QCD). This theory dictates that quarks and gluons are confined, i.e. locked together to form composite particles and cannot exist independently, making their study extremely difficult. Relativistic heavy ion collisions provide an extreme environment where nuclear matter can "melt" and form a deconfined medium that consists of free quarks and gluons. This state of matter, called the Quark Gluon Plasma (QGP) is what existed a few microseconds after the Big Bang, and is what eventually cooled and expanded to form the existing universe. It
-
-%The quark-gluon plasma (see Refs.~\cite{Roland:2014jsa,Busza:2018rrf} for recent reviews) can be probed by jets, sprays of particles that come from hard scattering processes between the nucleons involved in the collision. These jets are produced early in the collision and interact with the QGP as they make their way to the detector. Studying the rates and characteristics of these jets in \pbpb\ collisions, and comparing them to similar quantities in \pp\ collisions can provide information on the properties of the QGP. In particular, studying the  fragmentation pattern of these jets and how the energy is distributed around the jet axis can provide more information on the jet structure and put constraints on the medium response to the jet.
-
-%This thesis is split into 4 main chapters. Chapter~\ref{sec:theory} briefly describes the general theoretical background on QCD, heavy ion collisions, QGP, and jets, giving context to the measurements discussed in this thesis. Chapter~\ref{sec:jetMeasurements} will briefly discuss major jet measurements done by the ATLAS Heavy Ion Group. Chapter~\ref{sec:setup} gives an overview of the LHC and the ATLAS detector. Chapter~\ref{sec:qualification} will describe the work undertaken to become a member of the ATLAS Collaboration, and Chapter~\ref{sec:mainanalysis} will provide a detailed description of the measurement to determine the angular distributions of charged particles in \pbpb\ and \pp\ collisions. 
-
-
-
-
-
 % Create a dedication in italics with no heading, centered vertically
 % on the page.
 
@@ -154,6 +141,11 @@ For my Mother, Father, and Brother
 \chapter{Major Jet Measurements}
 \label{sec:jetMeasurements}
 \input{jetMeasurements.tex}
+\clearpage
+
+\chapter{Jet Energy Loss Models}
+\label{sec:jetModels}
+\input{jetModels.tex}
 \clearpage
 
 %\chapter{Experimental Setup}
